force-app/main/default/objects/Inventory__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Represents the associated order line item with an account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Account)</relationshipLabel>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>