force-app/main/default/objects/Inventory__c/fields/Belonging_1__c.field-meta.xml
<CustomField>
    <fullName>Belonging_1__c</fullName>
    <description>Represents the first belonging associated with the order line item.</description>
    <label>Belonging 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Debit card</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Jewellery</fullName>
            </value>
            <value>
                <fullName>Keys</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Wallet</fullName>
            </value>
            <value>
                <fullName>Watch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>