force-app/main/default/objects/Inventory__c/fields/Description_1__c.field-meta.xml
<CustomField>
    <fullName>Description_1__c</fullName>
    <description>Provides a description for the first aspect of the order line item.</description>
    <inlineHelpText>Description of belonging one</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>