force-app/main/default/objects/Inventory__c/fields/Description_2__c.field-meta.xml
<CustomField>
    <fullName>Description_2__c</fullName>
    <description>Provides a description for the second aspect of the order line item.</description>
    <inlineHelpText>Description of belonging 2</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>