force-app/main/default/objects/Inventory__c/fields/Description_3__c.field-meta.xml
<CustomField>
    <fullName>Description_3__c</fullName>
    <description>Provides a description for the third aspect of the order line item.</description>
    <inlineHelpText>Description of belonging 3</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>