force-app/main/default/objects/Inventory__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>Identifies the equipment associated with the order line item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Equipment__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Inventory</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>