force-app/main/default/objects/Inventory__c/fields/Inventory_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Name__c</fullName>
    <description>Specifies the name of the inventory item in the order line item.</description>
    <label>Inventory Item Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>