force-app/main/default/objects/Inventory__c/fields/Locker_No__c.field-meta.xml
<CustomField>
    <fullName>Locker_No__c</fullName>
    <description>Indicates the locker number associated with the order line item.</description>
    <label>Locker No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>