force-app/main/default/objects/Inventory__c/fields/Lot_Item__c.field-meta.xml
<CustomField>
    <fullName>Lot_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linking to Lot Item for given patient</description>
    <label>Lot Item</label>
    <referenceTo>Lot_Item__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>