force-app/main/default/objects/Inventory__c/fields/Lot_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Lot_Line_Items__c</fullName>
    <description>Represents the lot line item associated with the order line item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot Line Items</label>
    <referenceTo>Lot_Line_Items__c</referenceTo>
    <relationshipLabel>Order Line Item</relationshipLabel>
    <relationshipName>Order_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>