force-app/main/default/objects/Inventory__c/fields/Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number__c</fullName>
    <description>Captures the lot number associated with the order line item.</description>
    <label>Lot Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>