force-app/main/default/objects/Inventory__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Associates the order line item with a specific order.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>