force-app/main/default/objects/Inventory__c/fields/Order_Line_Item_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item_Date__c</fullName>
    <description>Captures the date of the order line item.</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>