force-app/main/default/objects/Inventory__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <description>Represents additional details or miscellaneous information about the order line item.</description>
    <label>Other</label>
    <type>TextArea</type>
</CustomField>