force-app/main/default/objects/Inventory__c/fields/Patient_Procedure_Id__c.field-meta.xml
<CustomField>
    <fullName>Patient_Procedure_Id__c</fullName>
    <description>Stores the unique identifier for the patient procedure associated with the order line item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Procedure Id</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Inventory (Patient Procedure Id)</relationshipLabel>
    <relationshipName>Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>