force-app/main/default/objects/Inventory__c/fields/Procedure_Codes__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Codes__c</fullName>
    <description>Captures the procedure codes related to the order line item.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure Codes</label>
    <referenceTo>Procedure__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>