force-app/main/default/objects/Inventory__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>Captures the return date for the order line item.</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>