force-app/main/default/objects/Inventory__c/fields/Return_Initiation_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Initiation_Date__c</fullName>
    <description>Records the initiation date of the return for the order line item.</description>
    <label>Return Initiation Date</label>
    <type>Date</type>
</CustomField>