force-app/main/default/objects/Inventory__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <description>Specifies the reason for returning the order line item.</description>
    <label>Return Reason</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>