force-app/main/default/objects/Inventory__c/fields/Return_Status__c.field-meta.xml
<CustomField>
    <fullName>Return_Status__c</fullName>
    <description>Indicates the status of the return process for the order line item.</description>
    <label>Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>