force-app/main/default/objects/Inventory__c/fields/Units_Available__c.field-meta.xml
<CustomField>
    <fullName>Units_Available__c</fullName>
    <description>Specifies the available units for the order line item.</description>
    <label>Units Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>