force-app/main/default/objects/Inventory__c/fields/Units_Procured__c.field-meta.xml
<CustomField>
    <fullName>Units_Procured__c</fullName>
    <description>Captures the number of units procured for the order line item.</description>
    <defaultValue>1</defaultValue>
    <label>Units Procured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>